--- a/src/styles.css
+++ b/src/styles.css
@@ -22,13 +22,15 @@ main {
 
 .marker::before {
   content: "";
-  width: 10px;
-  background-color: black;
-  height: 50px;
+  width: 20px;
+  background-color: rgb(216, 149, 24);
+  height: 90px;
   position: absolute;
-  top: -20px;
+  top: -15px;
   left: 50%;
   z-index: 1;
+  border-radius: 20px;
+  border:1px solid rgb(247, 188, 78);
 }
 
 .spinner {
@@ -39,7 +41,7 @@ main {
   border-radius: 50%;
   position: relative;
   padding: 10px;
-  border: 20px solid black;
+  border: 50px solid rgb(173, 8, 8);
 }
 
 .spinner::before {
@@ -54,6 +56,43 @@ main {
   border-radius: 50%;
   background-color: black;
   z-index: 1;
+}
+
+@keyframes flash1 {
+  0% {
+    background-color: rgb(156, 102, 0);
+  }
+
+  100% {
+    background-color: rgb(255, 192, 75);
+  }
+}
+
+@keyframes flash2 {
+  0% {
+    background-color: rgb(255, 192, 75);
+  }
+
+  100% {
+    background-color: rgb(156, 102, 0);
+  }
+}
+
+.bulb {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-left: -15px;
+  margin-top: -15px;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  z-index: 3;
+  animation: 1s ease-in-out flash1 infinite;
+}
+
+.bulb-container:nth-child(odd) .bulb {
+  animation: 1s ease-in-out flash2 infinite;
 }
 
 .name {
