--- a/src/styles.css
+++ b/src/styles.css
@@ -8,44 +8,48 @@ body {
 }
 
 main {
-  display: grid;
-  height: 100vh;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
 }
 
 .container {
-  place-self: center;
-  width: 500px;
-  height: 500px;
   position: relative;
+  width: 800px;
+  height: 800px;
 }
 
 .marker::before {
   content: "";
-  width: 20px;
   background-color: rgb(216, 149, 24);
-  height: 90px;
   position: absolute;
   top: -15px;
   left: 50%;
-  z-index: 1;
-  border-radius: 20px;
+  margin-left: -10px;
   border:1px solid rgb(247, 188, 78);
+  border-radius: 20px;
+  height: 90px;
+  width: 20px;
+  z-index: 3;
 }
 
 .spinner {
-  width: 100%;
-  height: 100%;
-  place-self: center;
   background-color: rgb(233, 196, 95);
+  border: 50px solid rgb(173, 8, 8);
   border-radius: 50%;
   position: relative;
   padding: 10px;
-  border: 50px solid rgb(173, 8, 8);
+  height: 100%;
+  width: 100%;
 }
 
 .spinner::before {
   content: "";
+  background-color: black;
+  border-radius: 50%;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -53,8 +57,6 @@ main {
   height: 40px;
   margin-left: -20px;
   margin-top: -20px;
-  border-radius: 50%;
-  background-color: black;
   z-index: 1;
 }
 
@@ -79,12 +81,12 @@ main {
 }
 
 .bulb {
+  border-radius: 50%;
   position: absolute;
   top: 50%;
   left: 50%;
   margin-left: -15px;
   margin-top: -15px;
-  border-radius: 50%;
   width: 30px;
   height: 30px;
   z-index: 3;
@@ -96,15 +98,29 @@ main {
 }
 
 .name {
+  font-size: 60px;
   position: absolute;
   top: 45%;
-  font-size: 40px;
   transform-origin: 100%;
   width: 48%;
 }
 
-button {
-  width: 100px;
+.button {
+  background-color: rgb(255, 192, 75);
+  border: 4px solid rgb(156, 102, 0);
+  border-radius: 10px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 30px;
+  margin-top: 50px;
+  font-size: 30px;
   height: 50px;
-  place-self: center;
+  width: 200px;
+}
+
+.button:hover {
+  background-color: rgb(156, 102, 0);
+  color: #fff;
 }
